[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Setup/Setup.gd" type="Script" id=1]
[ext_resource path="res://assets/themes/theme1.tres" type="Theme" id=2]
[ext_resource path="res://Scripts/Setup/PlayerSetup.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Setup/Color.gd" type="Script" id=4]

[sub_resource type="ButtonGroup" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="C" type="TabContainer" parent="."]
margin_right = 640.0
margin_bottom = 360.0
theme = ExtResource( 2 )

[node name="PlayerSetup" type="HBoxContainer" parent="C"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )

[node name="Info" type="VBoxContainer" parent="C/PlayerSetup"]
margin_right = 302.0
margin_bottom = 335.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HelpText" type="RichTextLabel" parent="C/PlayerSetup/Info"]
margin_right = 302.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 120 )
rect_pivot_offset = Vector2( 38.8145, 15.1534 )
mouse_filter = 1
text = "Others can join the game server by:

1) Connect to same network (e.g. wifi)

2) They the Server IP in their \"Join IP\" and joins the game"

[node name="text" type="RichTextLabel" parent="C/PlayerSetup/Info"]
margin_top = 124.0
margin_right = 302.0
margin_bottom = 144.0
rect_min_size = Vector2( 0, 20 )
rect_pivot_offset = Vector2( 69.629, 59.4518 )
mouse_filter = 1
size_flags_horizontal = 3
text = "Server IP:"

[node name="GameIP" type="RichTextLabel" parent="C/PlayerSetup/Info"]
margin_top = 148.0
margin_right = 302.0
margin_bottom = 188.0
rect_min_size = Vector2( 0, 40 )
mouse_filter = 1

[node name="text2" type="RichTextLabel" parent="C/PlayerSetup/Info"]
margin_top = 192.0
margin_right = 302.0
margin_bottom = 212.0
rect_min_size = Vector2( 0, 20 )
rect_pivot_offset = Vector2( 69.629, 59.4518 )
mouse_filter = 1
size_flags_horizontal = 3
text = "Message:"

[node name="Message" type="RichTextLabel" parent="C/PlayerSetup/Info"]
margin_top = 216.0
margin_right = 302.0
margin_bottom = 335.0
rect_min_size = Vector2( 0, 60 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/default_color = Color( 1, 0, 0, 1 )

[node name="Settings" type="VBoxContainer" parent="C/PlayerSetup"]
margin_left = 306.0
margin_right = 640.0
margin_bottom = 335.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.1

[node name="text3" type="RichTextLabel" parent="C/PlayerSetup/Settings"]
margin_right = 334.0
margin_bottom = 16.0
rect_min_size = Vector2( 0, 16 )
rect_pivot_offset = Vector2( 69.629, 59.4518 )
mouse_filter = 1
size_flags_horizontal = 3
text = "Player name:"

[node name="PlayerName" type="TextEdit" parent="C/PlayerSetup/Settings"]
margin_top = 20.0
margin_right = 334.0
margin_bottom = 68.0
rect_min_size = Vector2( 0, 48 )
rect_pivot_offset = Vector2( 74, 90 )

[node name="text2" type="RichTextLabel" parent="C/PlayerSetup/Settings"]
margin_top = 72.0
margin_right = 334.0
margin_bottom = 88.0
rect_min_size = Vector2( 0, 16 )
rect_pivot_offset = Vector2( 69.629, 59.4518 )
mouse_filter = 1
size_flags_horizontal = 3
text = "Character name:"

[node name="CharacterName" type="TextEdit" parent="C/PlayerSetup/Settings"]
margin_top = 92.0
margin_right = 334.0
margin_bottom = 140.0
rect_min_size = Vector2( 0, 48 )
rect_pivot_offset = Vector2( 74, 90 )

[node name="GetAnother" type="Button" parent="C/PlayerSetup/Settings"]
margin_top = 144.0
margin_right = 334.0
margin_bottom = 184.0
rect_min_size = Vector2( 0, 40 )
text = "Get another suggestion"

[node name="text" type="RichTextLabel" parent="C/PlayerSetup/Settings"]
margin_top = 188.0
margin_right = 334.0
margin_bottom = 204.0
rect_min_size = Vector2( 0, 16 )
rect_pivot_offset = Vector2( 69.629, 59.4518 )
mouse_filter = 1
size_flags_horizontal = 3
text = "Player color:"

[node name="Color" type="HBoxContainer" parent="C/PlayerSetup/Settings"]
editor/display_folded = true
margin_top = 208.0
margin_right = 334.0
margin_bottom = 291.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 4 )

[node name="Button" type="TextureButton" parent="C/PlayerSetup/Settings/Color"]
margin_right = 334.0
margin_bottom = 83.0
rect_min_size = Vector2( 40, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
action_mode = 0
group = SubResource( 1 )
expand = true

[node name="SaveToGame" type="Button" parent="C/PlayerSetup/Settings"]
margin_top = 295.0
margin_right = 334.0
margin_bottom = 335.0
rect_min_size = Vector2( 0, 40 )
text = "Save to Game"

[node name="GameStart" type="HBoxContainer" parent="C"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Info" type="VBoxContainer" parent="C/GameStart"]
editor/display_folded = true
margin_right = 314.0
margin_bottom = 324.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CheckPlayers" type="Button" parent="C/GameStart/Info"]
margin_right = 314.0
margin_bottom = 63.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "CheckPlayers"

[node name="text6" type="RichTextLabel" parent="C/GameStart/Info"]
margin_top = 67.0
margin_right = 314.0
margin_bottom = 83.0
rect_min_size = Vector2( 0, 16 )
rect_pivot_offset = Vector2( 69.629, 59.4518 )
mouse_filter = 1
size_flags_horizontal = 3
text = "PlayerNames"

[node name="Players" type="RichTextLabel" parent="C/GameStart/Info"]
margin_top = 87.0
margin_right = 314.0
margin_bottom = 150.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="text5" type="RichTextLabel" parent="C/GameStart/Info"]
margin_top = 154.0
margin_right = 314.0
margin_bottom = 170.0
rect_min_size = Vector2( 0, 16 )
rect_pivot_offset = Vector2( 69.629, 59.4518 )
mouse_filter = 1
size_flags_horizontal = 3
text = "PlayerColors
"

[node name="Color2" type="RichTextLabel" parent="C/GameStart/Info"]
margin_top = 174.0
margin_right = 314.0
margin_bottom = 237.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="text4" type="RichTextLabel" parent="C/GameStart/Info"]
margin_top = 241.0
margin_right = 314.0
margin_bottom = 257.0
rect_min_size = Vector2( 0, 16 )
rect_pivot_offset = Vector2( 69.629, 59.4518 )
mouse_filter = 1
size_flags_horizontal = 3
text = "PlayerIds"

[node name="PlayerIndexes" type="RichTextLabel" parent="C/GameStart/Info"]
margin_top = 261.0
margin_right = 314.0
margin_bottom = 324.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Go" type="VBoxContainer" parent="C/GameStart"]
editor/display_folded = true
margin_left = 318.0
margin_right = 632.0
margin_bottom = 324.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StartGame" type="Button" parent="C/GameStart/Go"]
margin_right = 314.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
text = "Start Game"

[node name="Message" type="RichTextLabel" parent="C/GameStart/Go"]
margin_top = 44.0
margin_right = 314.0
margin_bottom = 324.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GameSettings" type="HBoxContainer" parent="C"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Setup" type="VBoxContainer" parent="C/GameSettings"]
margin_right = 299.0
margin_bottom = 324.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Arrangement" type="VBoxContainer" parent="C/GameSettings"]
margin_left = 303.0
margin_right = 632.0
margin_bottom = 324.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.1
[connection signal="pressed" from="C/PlayerSetup/Settings/GetAnother" to="C/PlayerSetup" method="_on_GetAnother_pressed"]
[connection signal="pressed" from="C/PlayerSetup/Settings/SaveToGame" to="C/PlayerSetup" method="_on_SaveToGame_pressed"]
[connection signal="pressed" from="C/GameStart/Info/CheckPlayers" to="." method="_on_CheckPlayers_pressed"]
[connection signal="pressed" from="C/GameStart/Go/StartGame" to="." method="_on_startGame_pressed"]
